完善接口配置

--- a/hongs-magpie-web/web/WEB-INF/etc/magpie.properties
+++ b/hongs-magpie-web/web/WEB-INF/etc/magpie.properties
@@ -1,6 +1,13 @@
 
-# Top level secret key
-core.masque.secret.key=
+magpie.ai.default.url=http://127.0.0.1:11434/v1
+magpie.ai.default.key=ollama
+magpie.ai.default.sys=system
 
-# Off-line  notice api
-core.masque.notice.api=
+magpie.ai.deepseek.api=default
+magpie.ai.deepseek.mod=deepseek-r1:1.5b
+
+magpie.ai.embedding.api=default
+magpie.ai.embedding.mod=nomic-embed-text
+
+magpie.splitter.max-segment-size=1000
+magpie.splitter.max-overlap-size=100
