--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
@@ -1,13 +1,10 @@
 
-magpie.ai.base.url=http://127.0.0.1:11434/v1
-magpie.ai.base.key=ollama
-magpie.ai.base.sys=system
+magpie.ai.default.url=http://127.0.0.1:11434/v1
+magpie.ai.default.key=ollama
+magpie.ai.default.sys=system
 
-magpie.chat.deepseek.api=base
-magpie.chat.deepseek.mod=deepseek-r1:1.5b
-
-magpie.embedding.api=base
-magpie.embedding.mod=test
+magpie.ai.embedding.api=default
+magpie.ai.embedding.mod=test
 
 magpie.splitter.max-segment-size=1000
 magpie.splitter.max-overlap-size=100
