--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
@@ -3,6 +3,15 @@ magpie.ai.default.url=http://127.0.0.1:11434/v1
 magpie.ai.default.key=ollama
 magpie.ai.default.sys=system
 
+magpie.ai.test.api=default
+magpie.ai.test.mod=test
+
+magpie.ai.remind.api=default
+magpie.ai.remind.mod=test
+
+magpie.ai.intent.api=default
+magpie.ai.intent.mod=test
+
 magpie.ai.embedding.api=default
 magpie.ai.embedding.mod=test
 
