增加 ai agent 和 mcp server

--- a/hongs-serv-magpie/pom.xml
+++ b/hongs-serv-magpie/pom.xml
@@ -10,8 +10,8 @@
     </parent>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <primary.version>1.1-SNAPSHOT</primary.version>
     </properties>
     <dependencies>
@@ -47,6 +47,12 @@
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
             <version>1.0.0-beta1</version>
+        </dependency>
+        <!-- MCP -->
+        <dependency>
+            <groupId>io.modelcontextprotocol.sdk</groupId>
+            <artifactId>mcp</artifactId>
+            <version>0.9.0</version>
         </dependency>
     </dependencies>
 </project>
