增加 function call 和 mcp 支持

--- a/hongs-magpie-web/web/WEB-INF/etc/magpie.properties
+++ b/hongs-magpie-web/web/WEB-INF/etc/magpie.properties
@@ -1,13 +1,13 @@
 
-magpie.ai.default.url=http://127.0.0.1:11434/v1
-magpie.ai.default.key=ollama
-magpie.ai.default.sys=system
+magpie.llm.default.url=http://127.0.0.1:11434/v1
+magpie.llm.default.key=ollama
+magpie.llm.default.sys=system
 
-magpie.ai.deepseek.api=default
-magpie.ai.deepseek.mod=deepseek-r1:1.5b
+magpie.llm.deepseek.api=default
+magpie.llm.deepseek.mod=deepseek-r1:1.5b
 
-magpie.ai.embedding.api=default
-magpie.ai.embedding.mod=nomic-embed-text
+magpie.llm.embedding.api=default
+magpie.llm.embedding.mod=nomic-embed-text
 
 magpie.splitter.max-segment-size=1000
 magpie.splitter.max-overlap-size=100
