--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
@@ -1,19 +1,24 @@
 
-magpie.ai.default.url=http://127.0.0.1:11434/v1
-magpie.ai.default.key=ollama
-magpie.ai.default.sys=system
+magpie.llm.default.url=http://127.0.0.1:11434/v1
+magpie.llm.default.key=ollama
+magpie.llm.default.sys=system
 
-magpie.ai.test.api=default
-magpie.ai.test.mod=test
+magpie.llm.test.api=default
+magpie.llm.test.mod=test
 
-magpie.ai.remind.api=default
-magpie.ai.remind.mod=test
+magpie.llm.remind.api=default
+magpie.llm.remind.mod=test
 
-magpie.ai.intent.api=default
-magpie.ai.intent.mod=test
+magpie.llm.agent.api=default
+magpie.llm.agent.mod=test
 
-magpie.ai.embedding.api=default
-magpie.ai.embedding.mod=test
+magpie.llm.planner.api=default
+magpie.llm.planner.mod=test
+
+magpie.llm.embedding.api=default
+magpie.llm.embedding.mod=test
+
+mappie.tool.xxx=com.simple.Class.method
 
 magpie.splitter.max-segment-size=1000
 magpie.splitter.max-overlap-size=100
