完善 MCP 工具调用

--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
@@ -1,13 +1,12 @@
 
 magpie.llm.default.url=http://127.0.0.1:11434/v1
 magpie.llm.default.key=ollama
-magpie.llm.default.sys=system
 
-magpie.llm.test.api=default
-magpie.llm.test.mod=test
+magpie.llm.qwen.api=default
+magpie.llm.qwen.mod=qwen3:8b
 
 magpie.llm.remind.api=default
-magpie.llm.remind.mod=test
+magpie.llm.remind.mod=qwen3:8b
 
 magpie.llm.agent.api=default
 magpie.llm.agent.mod=test
@@ -16,9 +15,7 @@ magpie.llm.planner.api=default
 magpie.llm.planner.mod=test
 
 magpie.llm.embedding.api=default
-magpie.llm.embedding.mod=test
-
-mappie.tool.xxx=com.simple.Class.method
+magpie.llm.embedding.mod=nomic-embed-text
 
 magpie.splitter.max-segment-size=1000
 magpie.splitter.max-overlap-size=100
