--- a/hongs-magpie-web/web/WEB-INF/etc/defines.properties
+++ b/hongs-magpie-web/web/WEB-INF/etc/defines.properties
@@ -8,6 +8,7 @@ io.github.ihongs.serv.centra.*;\
 io.github.ihongs.serv.centre.*;\
 io.github.ihongs.serv.master.*;\
 io.github.ihongs.serv.matrix.*;\
+io.github.ihongs.serv.magpie.*;\
 io.github.ihongs.serv.oauth2.*
 
 # \u521d\u59cb\u5bb9\u5668
