--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
@@ -2,20 +2,17 @@
 magpie.llm.default.url=http://127.0.0.1:11434/v1
 magpie.llm.default.key=ollama
 
-magpie.llm.qwen.api=default
-magpie.llm.qwen.mod=qwen3:8b
-
-magpie.llm.remind.api=default
-magpie.llm.remind.mod=qwen3:8b
-
 magpie.llm.agent.api=default
-magpie.llm.agent.mod=test
+magpie.llm.agent.mod=
 
 magpie.llm.planner.api=default
-magpie.llm.planner.mod=test
+magpie.llm.planner.mod=
+
+magpie.llm.reminding.api=default
+magpie.llm.reminding.mod=
 
 magpie.llm.embedding.api=default
-magpie.llm.embedding.mod=nomic-embed-text
+magpie.llm.embedding.mod=
 
-magpie.splitter.max-segment-size=1000
-magpie.splitter.max-overlap-size=100
+document.splitter.max-segment-size=1000
+document.splitter.max-overlap-size=100
