--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie_lang.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie_lang.properties
@@ -1,6 +1,8 @@
 
 magpie.reference.opts.key.invalid=\u9009\u9879\u540d\u79f0\u975e\u6cd5, \u4e0d\u5f97\u542b\u6709\u5b57\u7b26: '$0'
 magpie.reference.nums.val.invalid=\u9009\u9879\u6570\u503c\u9519\u8bef, \u4e0d\u53ef\u8bc6\u522b\u7684\u6570\u5b57
+magpie.assistant.remind.empty=\u672a\u6307\u5b9a\u67e5\u8be2\u5173\u952e\u8bcd
+magpie.assistant.relate.empty=\u65e0\u53ef\u4f9b\u53c2\u8003\u7684\u8d44\u6599
 
 magpie.assistant.system=\
 \u4f60\u662f\u4e00\u4e2a\u53cb\u597d\u7684\u52a9\u7406, \u603b\u662f\u70ed\u5fc3\u56de\u7b54\u7528\u6237\u7684\u95ee\u9898
@@ -26,3 +28,4 @@ ${messages}\n\
 ## \u672c\u6b21\u63d0\u95ee:\n\
 \n\
 ${prompt}
+
