更新版本，完善内容分块

--- a/hongs-serv-magpie/pom.xml
+++ b/hongs-serv-magpie/pom.xml
@@ -40,17 +40,17 @@
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
-            <version>1.0.0-beta3</version>
+            <version>1.10.0</version>
         </dependency>
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-core</artifactId>
-            <version>1.0.0-beta3</version>
+            <version>1.10.0</version>
         </dependency>
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-open-ai</artifactId>
-            <version>1.0.0-beta3</version>
+            <version>1.10.0</version>
         </dependency>
         <!-- MCP Server -->
         <dependency>
