--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
@@ -14,5 +14,5 @@ magpie.llm.reminding.mod=
 magpie.llm.embedding.api=default
 magpie.llm.embedding.mod=
 
-document.splitter.max-segment-size=1000
-document.splitter.max-overlap-size=100
+default.splitter.max-segment-size=1000
+default.splitter.max-overlap-size=100
