--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
@@ -16,3 +16,11 @@ magpie.llm.embedding.mod=
 
 default.splitter.max-segment-size=1000
 default.splitter.max-overlap-size=100
+
+document.parser.pdf=dev.langchain4j.data.document.parser.apache.pdfbox.ApachePdfBoxDocumentParser
+document.parser.doc=dev.langchain4j.data.document.parser.apache.poi.ApachePoiDocumentParser
+document.parser.docx=dev.langchain4j.data.document.parser.apache.poi.ApachePoiDocumentParser
+document.parser.ppt=dev.langchain4j.data.document.parser.apache.poi.ApachePoiDocumentParser
+document.parser.pptx=dev.langchain4j.data.document.parser.apache.poi.ApachePoiDocumentParser
+document.parser.xls=dev.langchain4j.data.document.parser.apache.poi.ApachePoiDocumentParser
+document.parser.xlsx=dev.langchain4j.data.document.parser.apache.poi.ApachePoiDocumentParser
