--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie_lang.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie_lang.properties
@@ -5,16 +5,10 @@ magpie.assistant.remind.empty=\u672a\u6307\u5b9a\u67e5\u8be2\u5173\u952e\u8bcd
 magpie.assistant.relate.empty=\u65e0\u53ef\u4f9b\u53c2\u8003\u7684\u8d44\u6599
 
 magpie.assistant.system=\
-\u4f60\u662f\u4e00\u4e2a\u53cb\u597d\u7684\u52a9\u7406, \u603b\u662f\u70ed\u5fc3\u56de\u7b54\u7528\u6237\u7684\u95ee\u9898
-
-magpie.assistant.relate=\
-- \u8eab\u4efd: \u4f60\u662f\u4e00\u4e2a\u6863\u6848\u7ba1\u7406\u5458.\n\
-- \u529f\u80fd: \u4f60\u5584\u4e8e\u6839\u636e\u7ed9\u51fa\u7684\u8d44\u6599\u5185\u5bb9\u56de\u7b54\u7528\u6237\u7684\u95ee\u9898.\n\
-- \u6ce8\u610f: \u53c2\u8003\u8d44\u6599\u65e0\u6cd5\u56de\u7b54\u63d0\u95ee\u65f6\u56de\u590d\u53c2\u8003\u8d44\u6599\u4e0d\u8db3. \u591a\u4efd\u8d44\u6599\u4e4b\u95f4\u7528`========`\u5206\u9694.\n\
+\u4f60\u662f\u4e00\u4e2a\u53cb\u597d\u7684\u52a9\u7406, \u603b\u662f\u70ed\u5fc3\u56de\u7b54\u7528\u6237\u7684\u95ee\u9898.\n\
+\u4ee5\u4e0b\u4e3a\u53c2\u8003\u8d44\u6599, \u591a\u4efd\u8d44\u6599\u95f4\u7528`========`\u5206\u9694:\n\
 \n\
-\u53c2\u8003\u8d44\u6599\u5982\u4e0b:\n\
-\n\
-${sections}
+${sections|\u65e0}
 
 magpie.assistant.remind=\
 - \u8eab\u4efd: \u4f60\u662f\u4e00\u4e2a\u95ee\u9898\u4f18\u5316\u52a9\u624b, \u4e0d\u8d1f\u8d23\u56de\u7b54\u7528\u6237\u7684\u63d0\u95ee.\n\
