--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie_lang.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie_lang.properties
@@ -1,6 +1,8 @@
 
 magpie.reference.opts.key.invalid=\u9009\u9879\u540d\u79f0\u975e\u6cd5, \u4e0d\u5f97\u542b\u6709\u5b57\u7b26: '$0'
 magpie.reference.nums.val.invalid=\u9009\u9879\u6570\u503c\u9519\u8bef, \u4e0d\u53ef\u8bc6\u522b\u7684\u6570\u5b57
+magpie.assistant.state.invalid=\u5f53\u524d\u667a\u80fd\u52a9\u7406\u4e0d\u53ef\u7528
+magpie.assistant.token.invalid=\u5f53\u524d\u8bbf\u95ee\u53e3\u4ee4\u4e0d\u53ef\u7528
 magpie.assistant.remind.empty=\u672a\u6307\u5b9a\u67e5\u8be2\u5173\u952e\u8bcd
 magpie.assistant.relate.empty=\u65e0\u53ef\u4f9b\u53c2\u8003\u7684\u8d44\u6599
 
