完善代码，调整结构。

--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
@@ -3,16 +3,16 @@ magpie.llm.default.url=http://127.0.0.1:11434/v1
 magpie.llm.default.key=ollama
 
 magpie.llm.agent.api=default
-magpie.llm.agent.mod=
+magpie.llm.reminding.model=qwen3
 
 magpie.llm.planner.api=default
-magpie.llm.planner.mod=
+magpie.llm.reminding.model=qwen3
 
 magpie.llm.reminding.api=default
-magpie.llm.reminding.mod=
+magpie.llm.reminding.model=qwen3
 
 magpie.llm.embedding.api=default
-magpie.llm.embedding.mod=
+magpie.llm.embedding.model=nomic-embed-text
 
 default.splitter.max-segment-size=1000
 default.splitter.max-overlap-size=100
