增加向量分批处理以适配接口的限定，改写文档参数处理

--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
@@ -13,6 +13,7 @@ magpie.llm.reminding.model=qwen3
 
 magpie.llm.embedding.api=default
 magpie.llm.embedding.model=nomic-embed-text
+magpie.llm.embedding.batch=10
 
 default.splitter.max-segment-size=1000
 default.splitter.max-overlap-size=100
