--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie_lang.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie_lang.properties
@@ -1,5 +1,5 @@
 
-magpie.reference.opts.key.invalid=\u9009\u9879\u540d\u79f0\u975e\u6cd5, \u4e0d\u5f97\u542b\u6709\u5b57\u7b26: '$0'
+magpie.reference.opts.key.invalid=\u9009\u9879\u540d\u79f0\u975e\u6cd5, \u4e0d\u5f97\u542b\u6709\u7a7a\u683c\u6216'.:=?&#%[]'
 magpie.reference.nums.val.invalid=\u9009\u9879\u6570\u503c\u9519\u8bef, \u4e0d\u53ef\u8bc6\u522b\u7684\u6570\u5b57
 magpie.assistant.state.invalid=\u5f53\u524d\u667a\u80fd\u52a9\u7406\u4e0d\u53ef\u7528
 magpie.assistant.token.invalid=\u5f53\u524d\u8bbf\u95ee\u53e3\u4ee4\u4e0d\u53ef\u7528
