分块上的的标签、参数等约束取消同步，改为通过关联文档来查询

--- a/hongs-serv-magpie/pom.xml
+++ b/hongs-serv-magpie/pom.xml
@@ -30,6 +30,12 @@
             <groupId>${project.groupId}</groupId>
             <version>${primary.version}</version>
         </dependency>
+        <!-- 关联 -->
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-join</artifactId>
+            <version>9.12.2</version>
+        </dependency>
         <!-- 模板 -->
         <dependency>
             <groupId>com.jfinal</groupId>
