改写文档拆分器配置和实现方式，增加一个占位不拆分的模式

--- a/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
+++ b/hongs-serv-magpie/src/main/resources/io/github/ihongs/config/magpie.properties
@@ -17,6 +17,8 @@ magpie.llm.embedding.batch=10
 
 default.splitter.max-segment-size=1000
 default.splitter.max-overlap-size=100
+default.splitter.class=io.github.ihongs.serv.magpie.AiUtil$DefaultSplitter
+defiant.splitter.class=io.github.ihongs.serv.magpie.AiUtil$DefiantSplitter
 
 document.parser.pdf=dev.langchain4j.data.document.parser.apache.pdfbox.ApachePdfBoxDocumentParser
 document.parser.doc=dev.langchain4j.data.document.parser.apache.poi.ApachePoiDocumentParser
